| Bug #27359 | Partitions: memory allocation error message | ||
|---|---|---|---|
| Submitted: | 21 Mar 2007 22:03 | Modified: | 11 Apr 2007 6:05 |
| Reporter: | Peter Gulutzan | ||
| Status: | Closed | ||
| Category: | Server: Partition | Severity: | S3 (Non-critical) |
| Version: | 5.1.17-beta-debug | OS: | Linux (SUSE 10.0 / 64-bit) |
| Assigned to: | Alexey Botchkov | Target Version: | |
| Tags: | cluster, partition | ||
[21 Mar 2007 22:03]
Peter Gulutzan
[22 Mar 2007 12:42]
Miguel Solorzano
Thank you for the bug report. Verified as described.
[27 Mar 2007 15:39]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/23006 ChangeSet@1.2505, 2007-03-27 18:39:11+05:00, holyfoot@mysql.com +4 -0 Bug #27359 Partition: memory allocation error message if ndbcluster's nodes aren't set, the handlerton can return zero partitions in the partitioned table. So we should check for that.
[28 Mar 2007 10:37]
Alexander Barkov
The patch is ok: http://lists.mysql.com/commits/23006 There's only small discrepancy between the code: my_error(ER_PARTITION_NOT_DEFINED_ERROR, MYF(0), "partitions"); and the test results: ERROR HY000: For the partitioned engine it is necessary to define all partition "partitions" vs "parition". You probably forgot to run "--record".
[9 Apr 2007 14:42]
Bugs System
Pushed into 5.1.18-beta
[11 Apr 2007 6:05]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.1.18 changelog.
Noted in the changelog as a Cluster bug, since a user wouldn't encounter this without
trying to create an NDB table.
