Bug #27359 Partition: memory allocation error message

if ndbcluster's nodes aren't set, the handlerton can return zero partitions
in the partitioned table. So we should check for that.